--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ nav {
    margin-bottom: 20px;
     display: flex;
     padding: 10px;
+    border-radius: 15px;
 }
 h1 {
     display: flex;
@@ -64,4 +65,34 @@ main {
 h2, h3 {
     margin: 0px;
 }
+/* portfolio styles */
+.content h1 {
+    color: black;
+}
 
+#portfolio {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+#portfolio li {
+    background: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+#portfolio li:hover {
+    background: #eee;
+}
+
+#portfolio a {
+    text-decoration: none;
+    color: #454545;
+}
+ {
+    border-radius:15px;
+}
+#body-portfolio {
+    background-color:blue;
+}
