--- a/style.css
+++ b/style.css
@@ -48,12 +48,14 @@ main {
 }
 .sidebar-img {
     width: 200px;
-    border-radius: 15px
+    border-radius: 15px;
+    border-style: dashed;
 }
 .content {
     flex: 1;
     padding: 15px;
     color: red;
+    border-style:double;
 }
 
 /* portfolio styles */
@@ -76,7 +78,7 @@ h2, h3 {
 }
 
 #portfolio li {
-    background: #fff;
+    background: yellow;
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 10px;
@@ -90,9 +92,53 @@ h2, h3 {
     text-decoration: none;
     color: #454545;
 }
- {
-    border-radius:15px;
-}
-#body-portfolio {
-    background-color:blue;
+
+ /* responsive web design */
+ @media screen and (min-width: 120px) and (max-width: 1080px) {
+    main {
+      height: 100ch;
+      zoom: 1.5;
+      display: grid;
+    }
+
+    h1 {
+      font-size: 44px;
+    }
+
+    h2 {
+      font-size: 42px;
+    }
+
+    h3 {
+      font-size: 36px;
+    }
+
+    #all-contents {
+      height: 100ch;
+      margin: none;
+    }
+
+    a {
+      font-size: 42px;
+    }
+
+    .sidebar {
+      margin-right: 0px;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .sidebar-img {
+      width: 100%;
+    }
+
+    p,
+    li {
+      font-size: 24px;
+    }
+
+    .content {
+      align-content: center;
+      justify-content: center;
+    }
 }
