--- a/style.css
+++ b/style.css
@@ -43,13 +43,14 @@ main {
     display: flex;
 }
 .sidebar {
-    margin-right: 25px;
-    padding: 10px;
+    margin-right: 20px;
+    padding: 15px;
 }
 .sidebar-img {
     width: 200px;
     border-radius: 15px;
-    border-style: dashed;
+    border-style: solid;
+    border-width: 5px;
 }
 .content {
     flex: 1;
